@startuml



package save{
    class FileSave
    class SaveFileInfo
    FileSave <|-- SaveFileInfo
}

package editor{
    package canvas {
        class DotCanvas
        class CanvasHistory
        class CanvasPainter
        package layer{
            class LayerPainter
            class CanvasLayer
            LayerPainter <|-- CanvasLayer
        }
        CanvasPainter <|-- DotCanvas
        CanvasPainter <|-- CanvasLayer
        CanvasPainter <|-- LayerPainter
        DotCanvas <|-- CanvasLayer
    }


    package palette{
        class ColorPalette
        class PaletteWidget
        class PaletteEditor
        PaletteWidget <|-- ColorPalette
        PaletteEditor <|-- ColorPalette
    }

    package brush{
        class BaseBrush
        class BrushFactory
    }

    EditorPage <|-- DotCanvas
    EditorPage <|-- ColorPalette
    EditorPage <|-- FileSave
    EditorPage <|-- MainEditorWidget

    MainEditorWidget <|-- DotCanvas
    MainEditorWidget <|-- ColorPalette
    MainEditorWidget <|-- BaseBrush
    MainEditorWidget <|-- CanvasHistory
    MainEditorWidget <|-- ToolsWidget
    MainEditorWidget <|-- CanvasPainter
    MainEditorWidget <|-- PaletteWidget
    MainEditorWidget <|-- BrushFactory
    MainEditorWidget <|-- PaletteEditor
    CanvasPainter <|-- ColorPalette
    LayerPainter <|-- ColorPalette

    ToolsWidget <|-- ToolButton

    BaseBrush <|-- DotCanvas
    BaseBrush <|-- ColorPalette

    BrushFactory <|-- BaseBrush
}

package Works{
    class HomePage
    class WorkWidget
    HomePage <|-- WorkWidget
}


MyApp <|-- MainWiget
MainWiget <|-- HomePage
MainWiget <|-- SettingsPage
HomePage <|-- FileSave
HomePage <|-- EditorPage

SettingsPage <|-- FileSave

WorkWidget <|-- SaveFileInfo





@enduml